--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -430,7 +430,7 @@
                                 <!-- <img src="assets/images/features/feature1_1.jpg" alt="" class="img-responsive"> -->
                                 <!-- <a href="http://youtu.be/SZEflIVnhH8" data-type="youtube" class="venobox video-player"><i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="2s"></i></a> -->
                             <!-- </div> -->
-                            <div class="btn-box">
+                            <div class="btn-box" style="text-align: center;">
                                 <a href="#pricing" class="btn btn-color scrollto"><i class="icon arrow_carrot-2dwnn_alt"></i>Conheça o melhor plano para você!</a>
                             </div>
                             
@@ -792,25 +792,25 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                         <div class="team-img">
                             <img src="{% static 'assets/images/bebe_ip.jpg'%}" class="img-responsive" alt="">
                         </div>
-                        <h4>Seu bebê</h4>
+                        <h4 style="text-align: center;">Seu bebê</h4>
                     </div>
                     <div class="col-sm-3 team-box">
                         <div class="team-img">
                             <img src="{% static 'assets/images/casa_ip.jpg'%}" class="img-responsive" alt="">
                         </div>
-                        <h4>Sua casa</h4>
+                        <h4 style="text-align: center;">Sua casa</h4>
                     </div>
                     <div class="col-sm-3 team-box">
                         <div class="team-img">
                             <img src="{% static 'assets/images/escritorio_ip.jpg'%}" class="img-responsive" alt="">
                         </div>
-                        <h4>Sua empresa</h4>
+                        <h4 style="text-align: center;">Sua empresa</h4>
                     </div>
                     <div class="col-sm-3 team-box">
                         <div class="team-img">
                             <img src="{% static 'assets/images/casa_ferias_ip.jpg'%}" class="img-responsive" alt="">
                         </div>
-                        <h4>Sua casa de férias</h4>
+                        <h4 style="text-align: center;">Sua casa de férias</h4>
                     </div>
 
 
@@ -829,7 +829,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                                 <!-- <img src="assets/images/features/feature1_1.jpg" alt="" class="img-responsive"> -->
                                 <!-- <a href="http://youtu.be/SZEflIVnhH8" data-type="youtube" class="venobox video-player"><i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="2s"></i></a> -->
                             <!-- </div> -->
-                            <div class="btn-box">
+                            <div class="btn-box" style="text-align: center;">
                                 <a href="#pricing" class="btn btn-color scrollto"><i class="icon arrow_carrot-2dwnn_alt"></i>Conheça o melhor plano para você!</a>
                             </div>
                             
@@ -859,7 +859,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                     <div class="row row-centered">
                         <div class="col-xs-12">
                             <h2 style="text-align: center;">Comece hoje mesmo</h2>
-                            <p class="large">Escolha o plano mais adequado para você.</p>
+                            <p class="large" style="text-align: center;">Escolha o plano mais adequado para você.</p>
                         </div>
                     </div>
 
@@ -1060,7 +1060,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
 
             <div class="row">
                 <div class="col-xs-12">
-                  <div class="panel-container" style="height: 440px;">
+                  <div class="panel-container" style="height: 420px;">
                   <div class="tab-content" id="tab-feature-1" style="padding-top: 0px;">
                     <div class="container">
 
@@ -1101,7 +1101,8 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                           </div>
 
                           <!-- <button class="btn btn-color"><a href="contact">Assistir<i class="icon arrow_down"></i></a></button> -->
-
+						
+						<br><br>
 
                       </div>
                       <!-- Image-right -->
@@ -1144,8 +1145,8 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                           <img src="{% static 'assets/images/logo_escuro_pequeno.png'%}" class="img-resposive">
                           <br><br>
                           <p class="mobile-text">Nós ligamos para você!</p> <!-- <span class="text-color">Teste!</span> -->
-
-
+	
+							<br>
                           <h4><img src="{% static 'assets/images/whatsapp_small.jpg'%}" class="img-resposive">(48) 8467-5843</h4>
 
                           <!-- <a href="#" class="btn btn-color"><i class="icon icon_cloud-download_alt"></i>Chamada para ação</a> -->
@@ -1153,7 +1154,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                       </div>
 
                       <div class="col-sm-6 col-md-8">
-                        <p class="large">Preencha o formulário e <br>retornaremos o mais breve possível. </p>
+                        <p class="large"style=" text-align: center;">Preencha o formulário e retornaremos o mais breve possível. </p>
                       
                         <form id="contact_form" class="form-horizontal" role="form" action="/contato_form/" method="post">
                         {% csrf_token %} 
@@ -1214,7 +1215,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                                 <div class="col-sm-8">
                                   <div class="checkbox">
                                       <label>
-                                        <span class="col-sm-12 control-label" style="padding-top:0px;">Tenho alguns vizinhos interessados</span>
+                                        <span class="col-sm-12 control-label" style="padding-top:0px;">Tenho vizinhos interessados</span>
                                         <input type="checkbox" class="checkbox style-2 " id="input_vizinho" name="input_vizinho" checked="checked">
                                       </label>
                                     </div>
