--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -335,7 +335,7 @@
                 
                   <img src="{% static 'assets/images/flyer_small.jpg'%}" alt="" class="img-responsive">
 
-                  <div id="propaganda_slide" style="margin-top: 20px; margin-left: 30px;">
+                  <div id="propaganda_slide" style="margin-top: 20px; margin-left: 50px;">
                     <img src="{% static 'assets/images/publicidade_ponte.jpg'%}" class="img-responsive">
                   </div>
                 </div>
@@ -741,14 +741,16 @@
                             <!-- Input fields -->
                             <div class="form-group">
                                 <input type="text" name="experimente-cidade" id="experimente-cidade" class="form-control input-lg" placeholder="Cidade" required>
-                            </div><br>
+                            </div>
+                            <br>
+							<br>
 
                             <!-- Signup Button -->
-                            <button class="btn btn-color" id="assistir" type="submit" >Assistir<i class="icon arrow_right"></i></button>
+                            <button class="btn btn-color" id="assistir" type="submit" style="width: 270px; margin-left: 10px;" >Assistir<i class="icon arrow_right"></i></button>
                         </form>
                         <br>
                         </div>
-<br>
+						<br>
                         <div class="col-md-6">
                         
                           <div id="experimente" class="embed-responsive embed-responsive-16by9">
@@ -1051,7 +1053,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                 <div class="features-title">
                     <div class="row row-centered">
                         <div class="col-xs-12">
-                            <h2 class="text-white" style="text-align: center;">Programa de Parceiros Maaxcam Câmeras Compartilhadas</h2>
+                            <h2 class="text-white" style="text-align: center;">Programa de Parceiros </h2> <!-- Maaxcam Câmeras Compartilhadas -->
                             <p class="medium text-white">UNINDO  FORÇAS, CRESCEMOS JUNTOS</p>
                         </div>
                     </div>
@@ -1102,7 +1104,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
 
                           <!-- <button class="btn btn-color"><a href="contact">Assistir<i class="icon arrow_down"></i></a></button> -->
 						
-						<br><br>
+						<br><br><br><br>
 
                       </div>
                       <!-- Image-right -->
@@ -1232,21 +1234,21 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                                   </div>
                                 </div>
                             </div> -->
-                            <div class="form-group">
+                            <div class="form-group" style="padding: 0px;">
                                 <label for="inputType" class="col-sm-2 control-label">Vizinhos</label>
-                                <div class="col-sm-3">
+                                <div class="col-sm-3" style="padding: 5px;">
                                     <input type="text" class="form-control"  id="input_vizinho1_nome" name="input_vizinho1_nome" placeholder="Insira o nome">
                                 </div>
-                                <div class="col-sm-5">
+                                <div class="col-sm-5" style="padding: 5px;">
                                     <input type="email" class="form-control"  id="input_vizinho1_email" name="input_vizinho1_email" placeholder="Insira o email">
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" style="padding: 0px;">
                                 <label for="inputType" class="col-sm-2 control-label">Vizinhos</label>
-                                <div class="col-sm-3">
+                                <div class="col-sm-3" style="padding: 5px;">
                                     <input type="text" class="form-control"  id="input_vizinho2_nome" name="input_vizinho2_nome"  placeholder="Insira o nome">
                                 </div>
-                                <div class="col-sm-5">
+                                <div class="col-sm-5" style="padding: 5px;">
                                     <input type="email" class="form-control" id="input_vizinho2_email" name="input_vizinho2_email" placeholder="Insira o email">
                                 </div>
                             </div>
