--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -124,7 +124,6 @@
                                         <li><a href="#about" title="" class="scrollto">Câmera ao vivo</a></li> -->
                                         <li><a href="#cameras" title="" class="scrollto">Câmeras ao vivo</a></li>
 
-
                                         <!-- <li class="dropdown">
 
 
@@ -1006,7 +1005,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                               <a href="#" class="btn btn-color"></i>Solicite um orçamento!</a>
                             <div> -->
 <br>
-                            <div class="row showcase">
+                            <div class="row row-centered showcase">
                               <div class="col-md-6">
                                   <!-- Devices Image -->
                                   <div class="img-box">
@@ -1020,8 +1019,8 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
                                       </div>
                                   </div>
                               </div>
-                                <div class="col-md-6" style="text-align: center;">
-                                  <p class="large">Você deseja  divulgar seu serviço, oferecer credibilidade,  rever as melhores jogadas ou mostrar que o seu estabelecimento se localiza em um ponto turístico da cidade?</p>
+                                <div class="col-md-6" >
+                                  <p class="large" style="text-align: center;">Você deseja  divulgar seu serviço, oferecer credibilidade,  rever as melhores jogadas ou mostrar que o seu estabelecimento se localiza em um ponto turístico da cidade?</p>
 
 
                                   <h4>Transmita ao Vivo!</h4>
