--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -50,15 +50,22 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
 
-    <link  rel="stylesheet" href="http://www.janelas.tv.br/css/style.css" />
-    <link  rel="stylesheet" href="http://www.janelas.tv.br/css/settings.css" />
-    <link  rel="stylesheet" href="http://www.janelas.tv.br/js/slick/slick.css" />
+
+    <link rel="stylesheet" href="{% static 'assets/css/slick.css'%}">
+
+    <link rel="stylesheet" href="{% static 'assets/css/slick-theme.css'%}" >
+    
+    <link rel="stylesheet" href="{% static 'assets/css/janelas.css'%}">
+    
+
+ <!--    <link  rel="stylesheet" href="http://www.janelas.tv.br/js/slick/slick.css" />
     <link  rel="stylesheet" href="http://www.janelas.tv.br/js/slick/slick-theme.css" />
     <link  rel="stylesheet" href="http://www.janelas.tv.br/css/ie/ie.css" />
     <link  rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-    <link  rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" />
-    <link  rel="stylesheet" href="http://www.janelas.tv.br/css/janelas.css" />
-    <link  rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700" />
+    <link  rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" /> 
+        <link  rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700" />
+    <link  rel="stylesheet" href="http://www.janelas.tv.br/css/janelas.css" />-->
+
 
 
 
@@ -146,14 +153,14 @@
                                         <ul class="dropdown-menu">
                                           <li><a href="#cameras" class="scrollto" onclick="$('#slide1').click();">Ponte Hercílio Luz</a></li> 
                                           <li><a href="#cameras" class="scrollto" onclick="$('#slide2').click();">Kioske</a></li> 
-                                          <li><a href="#cameras" class="scrollto" onclick="$('#slide3').click();">Beira Mar Norte</a></li> 
+                                          <li><a href="#cameras" class="scrollto" onclick="$('#slide3').click();">Beira Mar Norte</a></li>
                                           </ul>
                                       </li>
 
 
 
                                     <li class="dropdown">
-                                        <a href="href="javscript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
+                                        <a href="javscript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
                                           Serviços <b class="caret"></b>
                                         </a>
                                         <ul class="dropdown-menu">
@@ -336,84 +343,137 @@
   <div class="item"><a href="#x" class="thumbnail2" id="slide11"><img class="lazyOwl" data-src="{% static 'assets/images/thumb_joaquina.jpg'%}" title="Praia da Joaquina"  alt="Lazy Owl Image"></a></div>
 </div> -->
 
-<div class="cameras-wrapper"><div class="cameras">
-    
+
+
+<div class="cameras-wrapper">
+
+<div class="cameras">
     <div>
     <div class="camera">
-		<a href="/camera-ao-vivo/sp/santos/ponta-da-praia"><img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sp/santos/ponta-da-praia">Ponta da Praia <br/><small>Santos (SP)</small></a></h2>
-	</div>
-	</div>
-    
-    <div>
-    <div class="camera">
-		<a href="/camera-ao-vivo/sp/santos/canal-3"><img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sp/santos/canal-3">Canal 3 <br/><small>Santos (SP)</small></a></h2>
-	</div>
-	</div>
-    
-    <div>
-    <div class="camera">
-		<a href="/camera-ao-vivo/sp/sao-sebastiao/praia-de-camburi"><img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sp/sao-sebastiao/praia-de-camburi">Camburi <br/><small>São Sebastião (SP)</small></a></h2>
+
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 35%; margin-left: -5px; animation: fadeIn 1s; -webkit-animation: fadeIn 1s;"></i>
+        </div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		
 	</div>
 	</div>
     
     <div>
     <div class="camera">
-		<a href="/camera-ao-vivo/sc/garopaba/silveira"><img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sc/garopaba/silveira">Silveira <br/><small>Garopaba (SC)</small></a></h2>
+
+		<a href="#x" id="slide2">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 35%; margin-left: -5px; animation: fadeIn 1s; -webkit-animation: fadeIn 1s;"></i>
+        </div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
 	</div>
 	</div>
-    
-    <div>
+	
+	    <div>
     <div class="camera">
-		<a href="/camera-ao-vivo/sc/imbituba/rosa"><img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sc/imbituba/rosa">Praia do Rosa <br/><small>Imbituba (SC)</small></a></h2>
+
+		<a href="#x" id="slide3">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 35%; margin-left: -5px; animation: fadeIn 1s; -webkit-animation: fadeIn 1s;"></i>
+        </div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
 	</div>
 	</div>
-    
-    <div>
+	
+	    <div>
     <div class="camera">
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo"><img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">Flamengo <br/><small>Salvador (BA)</small></a></h2>
+
+		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
+        <div class="blackover"></div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
 	</div>
 	</div>
-    
-    <div>
+	
+	    <div>
     <div class="camera">
-		<a href="/camera-ao-vivo/sp/sao-vicente/praia-do-itarare-surf"><img src="/img/camera-ao-vivo/sp/sao-vicente/praia-do-itarare-surf-mini@2x.jpg" class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sp/sao-vicente/praia-do-itarare-surf">Surf no Itararé <br/><small>São Vicente (SP)</small></a></h2>
+
+		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
+        <div class="blackover"></div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
 	</div>
 	</div>
-    
-    <div>
+	
+	    <div>
     <div class="camera">
-		<a href="/camera-ao-vivo/sp/sao-vicente/praia-do-itarare"><img src="/img/camera-ao-vivo/sp/sao-vicente/praia-do-itarare-mini@2x.jpg" class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sp/sao-vicente/praia-do-itarare">Praia do Itararé <br/><small>São Vicente (SP)</small></a></h2>
+
+		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
+        <div class="blackover"></div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
 	</div>
 	</div>
-    
-    <div>
+	
+	    <div>
     <div class="camera">
-		<a href="/camera-ao-vivo/sp/santos/praia-do-embare"><img src="/img/camera-ao-vivo/sp/santos/praia-do-embare-mini@2x.jpg" class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sp/santos/praia-do-embare">Embaré <br/><small>Santos (SP)</small></a></h2>
+
+		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
+        <div class="blackover"></div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
 	</div>
 	</div>
-    
-    <div>
+	
+	    <div>
     <div class="camera">
-		<a href="/camera-ao-vivo/sp/sao-vicente/ilha-porchat"><img src="/img/camera-ao-vivo/sp/sao-vicente/ilha-porchat-mini@2x.jpg" class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sp/sao-vicente/ilha-porchat">Ilha Porchat <br/><small>São Vicente (SP)</small></a></h2>
+
+		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
+        <div class="blackover"></div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
 	</div>
 	</div>
-    
-    <div>
+	
+	    <div>
     <div class="camera">
-		<a href="/camera-ao-vivo/sp/santos/saida-canal-do-porto"><img src="/img/camera-ao-vivo/sp/santos/saida-canal-do-porto-mini@2x.jpg" class="camera" width="127" height="79" alt=""/></a>
-		<h2><a href="/camera-ao-vivo/sp/santos/saida-canal-do-porto">Canal do porto <br/><small>Santos (SP)</small></a></h2>
+
+		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
+        <div class="blackover"></div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
 	</div>
 	</div>
+	
+	    <div>
+    <div class="camera">
+
+		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
+        <div class="blackover"></div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+	</div>
+	</div>
+	
+	
+	    <div>
+    <div class="camera">
+
+		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
+        <div class="blackover"></div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+	</div>
+	</div>
+	
+	<div>
+    <div class="camera">
+
+		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
+        <div class="blackover"></div>
+		<div class="textover">Hercílio Luz</div>
+		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+	</div>
+	</div>    
     
 </div>
 </div>
@@ -1599,12 +1659,15 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
 
 
 
+<script src="{% static 'assets/js/slick.js'%}"></script>
+<script src="{% static 'assets/js/janelas.js'%}"></script>
 
-    <script defer="defer"  src="http://www.janelas.tv.br/js/slick/slick.min.js">
-    </script><script defer="defer"  src="http://www.janelas.tv.br/js/jquery.touchSwipe.min.js"></script>
+
+<!--    <script defer="defer"  src="http://www.janelas.tv.br/js/slick/slick.min.js">  </script>
+    <script defer="defer"  src="http://www.janelas.tv.br/js/jquery.touchSwipe.min.js"></script>
     <script defer="defer"  src="http://www.janelas.tv.br/js/revolution/jquery.themepunch.plugins.min.js"></script>
     <script defer="defer"  src="http://www.janelas.tv.br/js/revolution/jquery.themepunch.revolution.min.js"></script>
-    <script defer="defer"  src="http://www.janelas.tv.br/js/janelas.js"></script>
+    <script defer="defer"  src="http://www.janelas.tv.br/js/janelas.js"></script> -->
 
 
 
