--- a/maaxcam/templates/front/index.html
+++ b/maaxcam/templates/front/index.html
@@ -322,11 +322,13 @@
 
             <div class="row row-centered">
                 <div class="col-md-8" style="text-align:center; max-width:800px;" >
+                
                 <h5 id="currentSlide_title" style="font-size: 20px; margin-top: -25px; margin-left: 12px;">Ponte Hercílio Luz</h5>
 				<div class="well" style="padding: 0;">
-				<div id="currentSlide" class="embed-responsive embed-responsive-16by9">
-				<iframe src="http://monitore.maaxcam.com.br/embed/37900/live/live/ponte-hercilio-luz?autoplay=true&sound=true" width="782px" height="440px" frameborder="0" allowfullscreen title="Ponte Hercílio Luz"></iframe>
-				</div>
+				
+					<div id="currentSlide" class="embed-responsive embed-responsive-16by9">
+						<iframe src="http://monitore.maaxcam.com.br/embed/37900/live/live/ponte-hercilio-luz?autoplay=true&sound=true" width="782px" height="440px" frameborder="0" allowfullscreen title="Ponte Hercílio Luz"></iframe>
+					</div>
 				</div>
 
 <!-- <div id="owl-demo" class="owl-carousel">
@@ -350,13 +352,13 @@
 <div class="cameras">
     <div>
     <div class="camera">
-
+		<a href="#x" id="slide1">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 35%; margin-left: -5px; animation: fadeIn 1s; -webkit-animation: fadeIn 1s;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
 		<div class="textover">Hercílio Luz</div>
 		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/>
-		
+		</a>
 	</div>
 	</div>
     
@@ -365,115 +367,131 @@
 
 		<a href="#x" id="slide2">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 35%; margin-left: -5px; animation: fadeIn 1s; -webkit-animation: fadeIn 1s;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<div class="textover">Kioske</div>
+		<img src='{% static "assets/images/thumb_kioske.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
 	</div>
 	
-	    <div>
+    <div>
     <div class="camera">
 
 		<a href="#x" id="slide3">
         <div class="blackover">
-			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 35%; margin-left: -5px; animation: fadeIn 1s; -webkit-animation: fadeIn 1s;"></i>
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
         </div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<div class="textover">Beira Mar</div>
+		<img src='{% static "assets/images/thumb_beira_mar.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
 	</div>
 	
-	    <div>
+    <div>
     <div class="camera">
 
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
-        <div class="blackover"></div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<a href="#x" id="slide4">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+        </div>
+		<div class="textover">Catedral</div>
+		<img src='{% static "assets/images/thumb_catedral.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
 	</div>
 	
-	    <div>
+    <div>
     <div class="camera">
 
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
-        <div class="blackover"></div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<a href="#x" id="slide5">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+        </div>
+		<div class="textover">Coqueiros</div>
+		<img src='{% static "assets/images/thumb_coqueiros.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
 	</div>
 	
-	    <div>
+	
+    <div>
     <div class="camera">
 
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
-        <div class="blackover"></div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<a href="#x" id="slide6">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+        </div>
+		<div class="textover">Koxixos</div>
+		<img src='{% static "assets/images/thumb_koxixos.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
 	</div>
 	
-	    <div>
+    <div>
     <div class="camera">
 
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
-        <div class="blackover"></div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<a href="#x" id="slide7">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%; margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+        </div>
+		<div class="textover">Mirante Lagoa</div>
+		<img src='{% static "assets/images/thumb_mirante.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
 	</div>
 	
-	    <div>
+    <div>
     <div class="camera">
 
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
-        <div class="blackover"></div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<a href="#x" id="slide8">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+        </div>
+		<div class="textover">Ponte Lagoa</div>
+		<img src='{% static "assets/images/thumb_ponte_lagoa.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
 	</div>
 	
-	    <div>
+    <div>
     <div class="camera">
 
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
-        <div class="blackover"></div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<a href="#x" id="slide9">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+        </div>
+		<div class="textover">Santo Antônio</div>
+		<img src='{% static "assets/images/thumb_sto_antonio.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
 	</div>
 	
-	    <div>
+    <div>
     <div class="camera">
 
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
-        <div class="blackover"></div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
-	</div>
-	</div>
-	
-	
-	    <div>
-    <div class="camera">
-
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
-        <div class="blackover"></div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<a href="#x" id="slide10">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+        </div>
+		<div class="textover">Kite</div>
+		<img src='{% static "assets/images/thumb_kite.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
 	</div>
 	
 	<div>
     <div class="camera">
 
-		<a href="/camera-ao-vivo/ba/salvador/praia-do-flamengo">
-        <div class="blackover"></div>
-		<div class="textover">Hercílio Luz</div>
-		<img src='{% static "assets/images/thumb_ponte.jpg"%}' class="camera" width="127" height="79" alt=""/></a>
+		<a href="#x" id="slide11">
+        <div class="blackover">
+			<i class="icon arrow_triangle-right_alt2 wow fadeIn" data-wow-duration="1s" style="visibility: visible; position: absolute; margin-top: 25%;  margin-left: -15%; animation: fadeIn 1s; -webkit-animation: fadeIn 1s; font-size: 38px;"></i>
+        </div>
+		<div class="textover">Joaquina</div>
+		<img src='{% static "assets/images/thumb_joaquina.jpg"%}' class="camera" width="127" height="79" alt=""/>
+		</a>
 	</div>
-	</div>    
+	</div>
     
 </div>
 </div>
@@ -1655,7 +1673,6 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
     <script src="{% static 'assets/js/plugins/twitter/tweetie.min.js'%}"></script>
     <!-- Custom Script -->
     <script src="{% static 'assets/js/custom.js'%}"></script>
-    <script src="{% static 'assets/js/slider_script.js'%}"></script>
 
 
 
@@ -1669,6 +1686,7 @@ Conectamos sua câmera IP em nossa plataforma e você realiza o seu monitorament
     <script defer="defer"  src="http://www.janelas.tv.br/js/revolution/jquery.themepunch.revolution.min.js"></script>
     <script defer="defer"  src="http://www.janelas.tv.br/js/janelas.js"></script> -->
 
+<script src="{% static 'assets/js/slider_script.js'%}"></script>
 
 
 
